--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
         "name": "Ahmad Shahzad",
         "url": "https://shahzad.dev"
     },
-    "dependencies": {},
+    "dependencies": {
+        "express": "^4.18.2"
+    },
     "description": "A Twitter automation tool built with Puppeteer.",
     "devDependencies": {
         "nodemon": "^3.0.2"
