--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "url": "https://shahzad.dev"
     },
     "dependencies": {
+        "dotenv": "^16.3.1",
         "express": "^4.18.2"
     },
     "description": "A Twitter automation tool built with Puppeteer.",
