--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dependencies": {
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "nunjucks": "^3.2.4"
+        "nunjucks": "^3.2.4",
+        "sass": "^1.69.5"
     },
     "description": "A Twitter automation tool built with Puppeteer.",
     "devDependencies": {
@@ -23,7 +24,9 @@
     },
     "scripts": {
         "start": "node .",
-        "start:dev": "nodemon -e js,html"
+        "start:dev": "nodemon -e js,html",
+        "start:sass": "sass --watch sass:public/css",
+        "build:sass": "sass sass:public/css"
     },
     "version": "0.0.1"
 }
