--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "nunjucks": "^3.2.4",
-        "sass": "^1.69.5"
+        "sass": "^1.69.5",
+        "sqlite": "^5.1.1",
+        "sqlite3": "^5.1.6"
     },
     "description": "A Twitter automation tool built with Puppeteer.",
     "devDependencies": {
