--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Sqlite3 databases
+*.db
+
+# Sass-generated files
+*.css
+*.css.map
