--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "url": "https://shahzad.dev"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "nunjucks": "^3.2.4",
