--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "body-parser": "^1.20.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "nanoid": "^3.3.7",
         "nunjucks": "^3.2.4",
         "sass": "^1.69.5",
         "sqlite": "^5.1.1",
