--- a/template.env
+++ b/template.env
@@ -3,3 +3,6 @@ PORT=3000
 
 INDICATOR_NAME="unique_name_for_this_app"
 INDICATOR_LINK="your_twitter_profile_link"
+
+LOGIN_USER="your_twitter_username_or_email"
+LOGIN_PASS="your_twitter_password"
