--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "express": "^4.18.2",
         "nanoid": "^3.3.7",
         "nunjucks": "^3.2.4",
+        "puppeteer": "^21.6.1",
         "sass": "^1.69.5",
         "sqlite": "^5.1.1",
         "sqlite3": "^5.1.6"
