--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "nanoid": "^3.3.7",
+        "node-cron": "^3.0.3",
         "nunjucks": "^3.2.4",
         "puppeteer": "^21.6.1",
         "sass": "^1.69.5",
